@@ -1,3 +1,8 @@
+2001-10-09  Miguel Sofer  <msofer@users.sourceforge.net>
+	
+	* generic/tclLiteral.c: (TclReleaseLiteral) reverted previous
+	patch for [Bug 467523] - cure is worse than the illness.
+
 2001-10-09  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* tests/io.test (io-32.8): Fixed typo.
